--- a/environmentui.ui
+++ b/environmentui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>539</width>
-    <height>318</height>
+    <width>912</width>
+    <height>489</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,40 +19,46 @@
   <widget class="QLabel" name="Label_Humidity">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>110</y>
-     <width>51</width>
-     <height>51</height>
+     <x>580</x>
+     <y>120</y>
+     <width>111</width>
+     <height>101</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>微软雅黑</family>
-     <pointsize>18</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <family>Arial Rounded MT Bold</family>
+     <pointsize>48</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
    <property name="text">
-    <string>11</string>
+    <string>60</string>
    </property>
   </widget>
   <widget class="QLabel" name="Label_Humidity_2">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>120</y>
-     <width>31</width>
-     <height>31</height>
+     <x>660</x>
+     <y>130</y>
+     <width>81</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>微软雅黑</family>
-     <pointsize>18</pointsize>
+     <family>Arial Rounded MT Bold</family>
+     <pointsize>48</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>%</string>
@@ -61,40 +67,46 @@
   <widget class="QLabel" name="Label_Temperature">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>410</x>
      <y>120</y>
-     <width>41</width>
-     <height>31</height>
+     <width>121</width>
+     <height>101</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>微软雅黑</family>
-     <pointsize>18</pointsize>
+     <family>Arial Rounded MT Bold</family>
+     <pointsize>48</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
    <property name="text">
-    <string>50</string>
+    <string>23</string>
    </property>
   </widget>
   <widget class="QLabel" name="Label_Temperature_2">
    <property name="geometry">
     <rect>
-     <x>220</x>
+     <x>490</x>
      <y>120</y>
-     <width>31</width>
-     <height>31</height>
+     <width>41</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>微软雅黑</family>
-     <pointsize>26</pointsize>
+     <family>Arial Rounded MT Bold</family>
+     <pointsize>48</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>°</string>
@@ -103,11 +115,20 @@
   <widget class="QPushButton" name="Add_Humidity">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>160</y>
-     <width>21</width>
-     <height>23</height>
+     <x>580</x>
+     <y>200</y>
+     <width>71</width>
+     <height>81</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Rounded MT Bold</family>
+     <pointsize>36</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>+</string>
@@ -119,11 +140,20 @@
   <widget class="QPushButton" name="Add_Temperature">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>160</y>
-     <width>21</width>
-     <height>23</height>
+     <x>390</x>
+     <y>220</y>
+     <width>61</width>
+     <height>61</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Rounded MT Bold</family>
+     <pointsize>36</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>+</string>
@@ -135,11 +165,20 @@
   <widget class="QPushButton" name="Reduce_Humidity">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>160</y>
-     <width>21</width>
-     <height>23</height>
+     <x>630</x>
+     <y>200</y>
+     <width>61</width>
+     <height>61</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Rounded MT Bold</family>
+     <pointsize>48</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>-</string>
@@ -151,17 +190,90 @@
   <widget class="QPushButton" name="Reduce_Temperature">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>160</y>
-     <width>21</width>
-     <height>23</height>
+     <x>450</x>
+     <y>220</y>
+     <width>41</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Rounded MT Bold</family>
+     <pointsize>48</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>-</string>
    </property>
    <property name="flat">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>80</y>
+     <width>171</width>
+     <height>331</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/img/img/temperature.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>320</y>
+     <width>111</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文琥珀</family>
+     <pointsize>36</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>温度</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>600</x>
+     <y>310</y>
+     <width>161</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文琥珀</family>
+     <pointsize>36</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>湿度</string>
    </property>
   </widget>
  </widget>
