--- a/img.qrc
+++ b/img.qrc
@@ -1,17 +1,14 @@
 <RCC>
     <qresource prefix="/img">
-        <file>img/background.jpg</file>
         <file>img/TV.png</file>
         <file>img/JBL.png</file>
         <file>img/temperature.png</file>
         <file>img/arrow.png</file>
         <file>img/backblue.png</file>
-        <file>img/house.png</file>
         <file>img/leave.png</file>
         <file>img/leave_p.png</file>
         <file>img/life.png</file>
         <file>img/life_p.png</file>
-        <file>img/line.png</file>
         <file>img/safe.png</file>
         <file>img/safe_p.png</file>
         <file>img/sleep.png</file>
@@ -25,5 +22,11 @@
         <file>img/menu.png</file>
         <file>img/model.jpg</file>
         <file>img/model_p.jpg</file>
+        <file>img/background.jpg</file>
+        <file>img/flank-4.png</file>
+        <file>img/flank-1.png</file>
+        <file>img/flank-2.png</file>
+        <file>img/flank-3.png</file>
+        <file>img/line.png</file>
     </qresource>
 </RCC>
